assets/css/custom.css
/* ... */
.background-purple {
    background-color: #9943ff;
}

.background-purple h1,
.background-purple h2 {
    color: white;
}

.background-purple p {
    color: #e0e0e0;
}

.background-gray {
    background-color: #f8f8f8;
}

.background-white {
    background-color: #fff;
}

.background-pink {
    background-color: #d216d2;
}

.background-blue {
    background-color: #36c9dd;
}

.background-orange {
    background-color: #ffb500;
}

.text-white {
    color: white;
}

.text-gray {
    color: #ababab;
}

.text-purple {
    color: #9943ff;
}

.text-dark-purple {
    color: #7400ff;
}

.text-orange {
    color: #ffb500;
}

.text-blue {
    color: #36c9dd;
}

.text-pink {
    color: #d216d2;
}



/* specific */
.intro-icons {
    width: 40px;
    height: 40px;
}

a h2:hover, .footer-nav ul li a:hover {
    color: #9943ff;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.posts-section-title {
    width: 100%;
    max-width: 1280px;
    padding: 0 2em;
}

.blog-image {
    width: 100%;
    max-height: 170px;
}

.tweet-text {
    line-height: 1.1em;
}

.tweet-action, .medium-poster {
    color: #ababab;
    font-size: 0.9em;
}

#release-schedule-svg{
    width: 100%;
    padding-right: 3em;
    padding-top: 1em;
}

.api-tag, .lib-tag {
    font-size: 0.5em;
    border: 1.5px solid #c7a1f5;
    padding: 0.3em 0.4em;
    border-radius: 0.8em;
    font-weight: 600;
    position: absolute;
    margin-left: 1em;
}

.container-logo-flex {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    max-width: 1280px;
    margin: 0 auto;
}

.logo-flex {
    margin: 0 1.5em;
}

.logo-flex a img {
    max-width: 120px;
}

/* footer */
.footer-cta-main {
    color: white;
    background: #7400ff;
    text-align: center;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 4em;
    padding-bottom: 4em;
}

.footer-cta-main h2 {
    color: white;
    margin-bottom: 1em;
}

footer {
    background: url(../images/footer-bg.png) top center no-repeat;
    padding-top: 4em;
    padding-bottom: 3em;
    text-align: center;
}

.footer-nav ul {
    list-style: none;
    padding-left: 0;
}


.footer-nav ul li a {
    color: #7400ff;
    text-transform: uppercase;
}

.footer-logo {
    margin: 0 auto;
}

.footer-icon {
	font-size: 0.8em;
	margin-left: 0.8em;
	margin-right: 0.8em;
}

.copy-date {
	color: #a492c1;
	width: 100%;
	text-align: center;
}

.footer-help-section {
	color: white;
	display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    max-width: 1280px;
    margin: 0 auto;
    padding-top: 3em;
    padding-bottom: 6em;
}

.footer-help-box {
    margin: 1em 1.5em;
}

.footer-help-box .icon {
    display: block;
    margin: 0 auto;
    padding-bottom: 0.1em;
}


/* buttons */
a.blue-btn,
.primary-btn {
	cursor: pointer;
    background: #36c9dd;
    color: #FFF;
    display: inline-block;
    font-weight: 600;
    font-size: 18px;
    line-height: 22px;
    padding: 14px 20px;
    border-radius: 100px;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

a.blue-btn:hover,
.primary-btn:hover {
    background: #a785e7;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    color: #fff;

}

/* install options selector */
/* new selector */

.selector {
    width: 100%;
}

.selector .options div {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
}

.selector .options .option-label {
	color: white;
	width: 6em;
    text-transform: uppercase;
    font-weight: 600;
    margin-top: 0.6em;
}

.selector .options .option {
    background: #e3e3e3;
    color: #3c3c3c;
    flex: 1 1;
    margin: 0.2em;
    padding: 0.3em;
    cursor: pointer;
}

.selector .options .option .svg-inline--fa {
	margin-top: 0.2em;
	padding-left: 0.3em;
}

.selector .options .active {
    background: #36c9dd;
    font-weight: 600;
    color: #424242;
}

.selector .options .disabled {
    background: #a785e7;
    color: #706880;
    cursor: not-allowed;
}

.cmd {
	display: flex;
}

.cmd-label {
	color: white;
	width: 6em;
    text-transform: uppercase;
    font-weight: 600;
    margin-top: 2em;
}

.cmd-box {
    cursor: text;
    overflow: auto;
    width: calc(100% - 6em);
}

.hidden {
    display: none;
}

.noselect, div.option, .primary-btn, a.blue-btn, .primary-btn {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
}

.selector-buttons {
	text-align: center;
	margin-top: 1em;
}


/* _layout/short.html */
header.short {
    background: url(../images/header-bg.svg) top center no-repeat;
    padding: 34px 0 0 0;
    min-height: 304px;
    background-position-y: -334px;
}

body.short {
    margin-top: 80px;
    padding-top: 40px;
}

body.short h2 {
    padding-bottom: 30px;
}


/* responsive screen breakpoints */
/* default is above on 1280px extra large */
/* based on https://purecss.io/grids/ */

/* 568px small */
@media only screen and (max-width: 35.5em) {

	.selector .options .option-label {
		width: 5em;
		font-size: 0.6em;
	    margin-top: 0.5em;
	}

	.selector .options .option {
		font-size: 0.9em;
	}

}
/* ... */

